# conference

./: .bedrock_agentcore.yaml  ARCHITECTURE_AND_DEPLOYMENT.md  README.md  agent_tools_config.py  booking_agent.py  conference_booking_ui.html  dynamodb-policy.json  initialize_dynamodb.py  invoke_agent.py  lambda_handler.py  main.py  payload.json  prompts.md  prompts2.md  pyproject.toml  requirements.txt  strands_agents.py  strands_runtime.py  strands_tools.py  test_booking.py  test_scenarios.py  values.json
.bedrock_agentcore/conference_booking_agent_v2/: Dockerfile
